public/css/header/header.css
header {
  background-color: var(--amarillo);
  box-shadow: 1px 2px 0 rgba(0, 0, 0, 0.1);
}
header nav {
  background-color: var(--amarillo);
  margin: 0;
  width: 100%;
  height: 87px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 0 15px;
  padding-bottom: 10px;
  font-size: 14px;
  position: fixed;
}

header .navbar-menus {
  display: none;
}

header .responsive {
  height: 100%;
  width: auto;
}

header .nav-slogan {
  margin: 5px 0;
}

/* .nav-slogan-mobile{
  display: none;
} */

header .navbar-top {
  width: 100%;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid rgba(102, 102, 102, 0.343);
}

header .navbar-top .logo,
header .navbar-top form {
  height: 32px;
}

header .navbar-top form {
  width: 50%;
  border-radius: 3px;
  display: flex;
  padding: 5px;
  height: 32px;
  max-width: 600px;
  background-color: #fff;
  box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.1);
  margin: 0 15px;
}
header .navbar-top form #navbar-top__search {
  border: none;
  height: 100%;
  width: 95%;
  padding: 5px;
  border-right: 1px solid rgba(102, 102, 102, 0.343);
}
header .navbar-top form #navbar-top__search:focus {
  outline: none;
}
header .navbar-top form #navbar-top__button {
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 46px;
  background-color: transparent;
}

header .navbar-top form #navbar-top__button > i {
  font-size: 18px;
  color: var(--gris-oscuro);
}
header .navbar-top .logo {
  width: 140px;
}

header .burger-menu {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 10px 0;
}

header .fas {
  font-size: 2em;
  padding: 5px;
}

header a {
  text-decoration: none;
  color: var(--azul);
}

@media (min-width: 769px) {
  header > nav {
    display: flex;
    flex-direction: column;
    height: 100px;
    width: 100%;
    position: fixed;
    max-width: 1200px;
    margin: auto;
  }

  header > nav .navbar-top {
    padding: 5px;
    margin: 0;
    height: 60px;
    border-bottom: none;
    width: 100%;
  }
  header .navbar-top .logo {
    width: 180px;
  }

  header > nav .navbar-top form {
    height: 39px;
  }
  header > nav > p {
    position: absolute;
    right: 0px;
    top: 15px;
    font-size: 13px;
    font-weight: 300;
  }

  header .navbar-menus {
    margin: 0 auto;
    width: 100%;
    display: flex;
    justify-content: space-between;
  }
  header .navbar-menus > ul {
    display: initial;
    width: 100%;
    display: flex;
    list-style: none;
    gap: 10px;
  }
  header .navbar-menus > ul:last-child {
    justify-content: end;
  }
  header .burger-menu {
    display: none;
  }
}
.nav-slogan-mobile {
  display: block;
}
.nav-slogan {
  display: none;
}
@media (min-width: 769px) {
  .nav-slogan {
    display: block;
  }
  .nav-slogan-mobile {
    display: none;
  }
}

